--- a/css/style.css
+++ b/css/style.css
@@ -255,9 +255,9 @@ main {
   background: linear-gradient(to bottom, var(--main-color), var(--second-color));
   height: 70vh;
   width: 100%;
-  position: absolute;
-  top: -70vh;
-  z-index: -5;
+  position: fixed;
+  bottom: 0;
+  z-index: -10;
   opacity: 0.3;
 }
 
@@ -298,6 +298,7 @@ main {
 
 /*Navbar Setting*/
 nav {
+  font-family: "ReadexPro-bold";
   border-bottom: 1px solid #e7e6e1;
   background: hsla(0, 0%, 100%, 0.3);
   display: flex;
