--- a/css/style.css
+++ b/css/style.css
@@ -315,7 +315,7 @@ main {
 /* content setting */
 .two {
   width: 100%;
-  height: 300vh;
+  height: 400vh;
   display: flex;
   align-items: start;
   justify-content: start;
@@ -330,7 +330,12 @@ main {
   font-family: var(--font-readex);
 }
 
-.two .main .content-1 {
+.two .main .content-1,
+.two .main .content-2,
+.two .main .content-3,
+.two .main .content-4,
+.two .main .content-5,
+.two .main .content-6 {
   display: flex;
   justify-content: start;
   align-items: center;
@@ -357,8 +362,15 @@ main {
 
 .main .content-1 .heading-content::after,
 .main .content-2 .heading-content::after,
-.main .content-3 .heading-content::after {
+.main .content-3 .heading-content::after,
+.main .content-4 .heading-content::after,
+.main .content-6 .heading-content::after {
   content: " Solo";
+  color: var(--second-color);
+}
+
+.main .content-5 .heading-content::after {
+  content: " Kulit solo";
   color: var(--second-color);
 }
 
@@ -369,15 +381,6 @@ main {
 .main .content-5 .desk,
 .main .content-6 .desk {
   color: var(--third-color);
-}
-
-.two .main .content-2 {
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  flex-direction: column;
-  height: 100vh;
-  width: 80%;
 }
 
 .main .content-2 .heading-content,
@@ -435,15 +438,6 @@ main {
   background-size: cover;
   width: 300px;
   height: 200px;
-}
-
-.two .main .content-3 {
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  flex-direction: column;
-  height: 100vh;
-  width: 80%;
 }
 
 /*Card Profile Setting*/
